--- a/frontend/src/Styles/Properties/ContactUs.css
+++ b/frontend/src/Styles/Properties/ContactUs.css
@@ -41,20 +41,13 @@
     height: 600px;
 }
 
-.heading,
-.subheading {
+.heading {
     text-align: center;
 }
 
 .heading {
-    font-size: 1.2rem;
+    font-size: 2rem;
     color: gray;
-    margin-bottom: 30px;
-}
-
-.subheading {
-    font-size: 2.2rem;
-    font-weight: 100;
     margin-bottom: 30px;
 }
 
@@ -97,11 +90,12 @@
     background-color: #34A0A4;
     color: white;
     border: none;
-    border-radius: 25px;
+    border-radius: 30px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
+    font-weight: bold;
     width: 50%;
-    max-width: 250px;
+    max-width: 200px;
     margin-top: 20px;
 }
 
@@ -129,10 +123,6 @@
         width: 90%;
     }
 
-    .subheading {
-        font-size: 1.8rem;
-    }
-
     .form-container button {
         width: 70%;
         max-width: 200px;
@@ -146,12 +136,9 @@
     }
 
     .heading {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 
-    .subheading {
-        font-size: 1.5rem;
-    }
 
     .form-container input,
     .form-container textarea {
