--- a/frontend/src/Styles/About/imageCorousel.css
+++ b/frontend/src/Styles/About/imageCorousel.css
@@ -52,7 +52,7 @@
 
 .carousel-btn {
     font-size: 2rem;
-    color: #007bff;
+    color: #040709;
     background: transparent;
     border: none;
     cursor: pointer;
