--- a/frontend/src/Styles/Home/Home.css
+++ b/frontend/src/Styles/Home/Home.css
@@ -25,14 +25,13 @@ body {
     color: white;
     padding: 15px;
     margin: 15px;
-    position: relative;
-    height: auto; 
+    height: 100%; 
     flex: 1; 
   }
   
   .home-s1 h1 {
     margin-top: 5vh;
-    font-size: 7vh;
+    font-size: 5em;
     margin: 0 20px;
   }
   
@@ -43,7 +42,7 @@ body {
   
   .home-s1-img {
     width: 100%;
-    height: 100%;
+    height: 80vh;
     border-radius: 20px;
     object-fit: cover;
     object-position: center;
@@ -81,22 +80,25 @@ body {
     color: rgb(0, 0, 0);
     padding: 35px;
     margin: 15px;
-    position: relative;
+    margin-top: 11em;
     height: auto; 
     flex: 1; 
   }
   
   .s2-container_1 > h3{
     font-size: 4.8vh;
+    padding: 1em;
   }
   
   .s2-container_1 > p{
     font-size: 2.1vh;
+    padding: 1em;
   }
   
   .s2-container_2{
     display: flex;
     flex-direction: row;
+    padding: 1em;
     gap: 2%;
   }
   
@@ -129,23 +131,26 @@ body {
     text-align: center;
     border-radius: 20px;
     color: rgb(0, 0, 0);
-    padding: 5vh;
+    padding: 3em;
     height: auto; 
     flex: 1; 
   }
   
   .s3-container_1 > h3{
     font-size: 5.8vh;
+    padding: 1em;
   }
   
   .s3-container_1 > p{
     font-size: 2.1vh;
+    padding: 1em;
   }
   
   .s3-container_2 {
     display: flex;
     flex-direction: row;
     width: 100%;
+    padding: 1em;
     gap: 1%;
   }
   
@@ -226,6 +231,7 @@ body {
   .s4-container_1>h1{
     font-size: 5vh;
     text-align: start;
+    padding: 0.2em;
   }
   .s4-container_1>p{
     font-size: 2.3vh;
