--- a/frontend/src/Styles/Properties/PropertiesDetails.css
+++ b/frontend/src/Styles/Properties/PropertiesDetails.css
@@ -4,11 +4,11 @@
     flex-direction: column;
     align-items: center;
     padding: 60px;
-    background: linear-gradient(145deg, #e3fdfd, #34A0A4);
     min-height: 100vh;
     transition: background 0.3s ease;
     width: 100%;
     margin: 0 auto;
+    margin-bottom: 30px;
 }
 
 /* Heading*/
@@ -16,7 +16,7 @@
     font-size: 3.5rem;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-family: 'Roboto', sans-serif;
@@ -30,34 +30,28 @@
 
 
 /* Property card */
-#property-card {
+#property-card-d {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
+    gap: 70px;
     align-items: center;
-    background-color: #ffffff;
     border-radius: 20px;
-    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
     width: 90%;
-    max-width: 1100px;
+    max-width: 1400px;
     margin-top: 40px;
-    padding: 40px;
+    padding: 30px;
     position: relative;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
     animation: slideInUp 1.5s ease-out;
-}
-
-#property-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 /* Image*/
 #property-image {
     width: 100%;
-    height: 500px;
+    max-height: 500px;
     object-fit: cover;
     border-radius: 15px;
-    margin-bottom: 25px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     animation: fadeInImage 1.5s ease-in-out;
 }
@@ -214,4 +208,37 @@
         font-size: 2.2rem;
         margin-bottom: 15px;
     }
+}
+
+
+/*favorite icon */
+#favorite-icon {
+    position: absolute;
+    top: 45px;
+    right: 45px;
+    z-index: 10;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease, border 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    background-color: rgb(186, 183, 183);
+    color: white;
+}
+
+#favorite-icon.favorited {
+    background-color: white;
+    color: red;
+}
+
+#favorite-icon:hover {
+    transform: scale(1.1);
+}
+
+#favorite-icon svg {
+    font-size: 2rem;
 }
