--- a/frontend/src/Styles/CompareTool/compareTool.css
+++ b/frontend/src/Styles/CompareTool/compareTool.css
@@ -39,8 +39,9 @@ h2 {
   padding: 15px;
   margin-bottom: 15px;
   border-radius: 5px;
-  width: 23%; /* Display 4 properties per row on larger screens */
+  width: 23%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
 }
 
 #property-card h3 {
@@ -79,6 +80,7 @@ input[type="checkbox"] {
   font-weight: bold;
   background-color: #f1f1f1;
   padding: 10px;
+  flex-wrap: wrap;
 }
 
 .table-header-item-feature {
@@ -96,6 +98,7 @@ input[type="checkbox"] {
 .table-row {
   display: flex;
   border-bottom: 1px solid #ddd;
+  flex-wrap: wrap;
 }
 
 .table-row-header {
@@ -109,6 +112,7 @@ input[type="checkbox"] {
   flex: 1;
   padding: 10px;
   text-align: center;
+  word-wrap: break-word;
 }
 
 /* Alert styles */
@@ -123,14 +127,17 @@ input[type="checkbox"] {
 
 /* Responsive styles */
 @media (max-width: 1024px) {
+  /* Properties List */
   .properties-list {
     justify-content: space-around;
   }
 
   #property-card {
     width: 48%; /* Display 2 properties per row */
+    margin-bottom: 20px;
   }
 
+  /* Comparison Table */
   .table-header {
     flex-direction: column;
   }
@@ -157,12 +164,16 @@ input[type="checkbox"] {
 }
 
 @media (max-width: 768px) {
+  /* Properties List */
   #property-card {
     width: 100%; /* Display 1 property per row */
+    margin-bottom: 20px;
   }
 
+  /* Comparison Table */
   .table-header {
     flex-direction: column;
+    align-items: flex-start;
   }
 
   .table-header-item-feature, .table-header-item {
@@ -173,6 +184,42 @@ input[type="checkbox"] {
 
   .table-row {
     flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .table-row-header {
+    width: 100%;
+    background-color: #f9f9f9;
+  }
+
+  .table-row-item {
+    width: 100%;
+    text-align: left;
+  }
+}
+
+@media (max-width: 480px) {
+  /* Properties List */
+  #property-card {
+    width: 100%; 
+    margin-bottom: 15px;
+  }
+
+  /* Comparison Table */
+  .table-header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .table-header-item-feature, .table-header-item {
+    text-align: left;
+    padding: 5px;
+    width: auto;
+  }
+
+  .table-row {
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .table-row-header {
