--- a/frontend/src/Styles/Home/Home.css
+++ b/frontend/src/Styles/Home/Home.css
@@ -42,8 +42,10 @@ body {
   
   .home-s1-img {
     width: 100%;
-    height: 80vh;
-    border-radius: 20px;
+    height: 90%;
+    margin-top: 3.5em;
+    padding: 1.3em;
+    border-radius: 45px;
     object-fit: cover;
     object-position: center;
     position: absolute;
@@ -76,11 +78,11 @@ body {
   .home-s2 {
     background-color: white;
     text-align: center;
-    border-radius: 20px;
+    border-radius: 25px;
     color: rgb(0, 0, 0);
     padding: 35px;
-    margin: 15px;
-    margin-top: 11em;
+    margin: 1.4em;
+    margin-top: 16.5em;
     height: auto; 
     flex: 1; 
   }
