--- a/frontend/src/Styles/About/inquiryform.css
+++ b/frontend/src/Styles/About/inquiryform.css
@@ -9,7 +9,7 @@
   height: 100vh;
 } */
 
-.form-container {
+.enquiry-form-container {
   width: 100%;
   max-width: 500px;
   background: #fff;
@@ -17,6 +17,8 @@
   border-radius: 15px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   animation: fadeIn 1s ease-in-out;
+  margin: 20px auto;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 @keyframes fadeIn {
@@ -30,52 +32,51 @@
   }
 }
 
-.form-title {
+.enquiry-form-title {
   font-size: 24px;
   color: #333;
   margin-bottom: 20px;
   text-align: center;
 }
 
-.enquiry-form {
+.enquiry-form-container {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
-.form-group {
+.enquiry-form-group {
   display: flex;
   flex-direction: column;
 }
 
-label {
+.qf-label {
   font-size: 14px;
   color: #555;
   margin-bottom: 5px;
 }
 
-input,
-textarea {
+.qf-input,
+.eq-textarea {
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
   font-size: 14px;
   transition: all 0.3s;
 }
-
-input:focus,
-textarea:focus {
+.qf-input:focus,
+.eq-textarea:focus {
   border-color: #007bff;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.2);
   outline: none;
 }
 
-textarea {
+.eq-textarea {
   resize: none;
   height: 100px;
 }
 
-.submit-button {
+.enquiry-submit-button {
   background: #007bff;
   color: #fff;
   border: none;
@@ -84,9 +85,12 @@ textarea {
   cursor: pointer;
   font-size: 16px;
   transition: all 0.3s;
+  display: block;
+  margin: 10px auto;
+  
 }
 
-.submit-button:hover {
+.enquiry-submit-button:hover {
   background: #0056b3;
   transform: scale(1.05);
 }
