--- a/frontend/src/Styles/Home/Home.css
+++ b/frontend/src/Styles/Home/Home.css
@@ -133,6 +133,7 @@ body {
     text-align: center;
     border-radius: 20px;
     color: rgb(0, 0, 0);
+    
     padding: 3em;
     height: auto; 
     flex: 1; 
@@ -214,10 +215,10 @@ body {
   /* Home section 4 */
   
   .home-s4 {
-    background-color: white;
+    background: linear-gradient(109.6deg, rgb(0, 37, 84) 11.2%, rgba(0, 37, 84, 0.32) 100.2%);
     text-align: center;
     border-radius: 20px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 35px;
     margin: 15px;
     position: relative;
