--- a/frontend/src/Styles/Properties/Features.css
+++ b/frontend/src/Styles/Properties/Features.css
@@ -92,7 +92,7 @@
 .property-specs {
     display: flex;
     justify-content: center;
-    gap: 30px;
+    gap: 15px;
     margin-top: 10px;
 }
 
@@ -171,7 +171,7 @@
         grid-gap: 25px;
     }
 
-    .property-card {
+    .property-card-1 {
         min-height: auto;
     }
 
@@ -187,12 +187,13 @@
 /*tablets */
 @media (max-width: 992px) {
     .property-grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: 2fr;
         grid-gap: 20px;
     }
 
-    .property-card {
+    .property-card-1 {
         min-height: auto;
+        width: 100%;
     }
 
     .features h1 {
@@ -215,12 +216,17 @@
     }
 
     .property-grid {
-        grid-template-columns: 1fr;
+        /* grid-template-columns: 1fr; */
         grid-gap: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
-    .property-card {
+    .property-card-1 {
         min-height: auto;
+        width: 350px;
     }
 
     .features h1 {
@@ -311,7 +317,7 @@
     color: #333;
     cursor: pointer;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
-    margin: 60px 0px;
+    /* margin-top: 60px; */
 }
 
 .features select:focus {
@@ -335,8 +341,40 @@
 
 @media (max-width: 576px) {
     .features select {
-        width: 180px;
+        width: 250px;
         font-size: 0.85rem;
         padding: 6px;
     }
+
+    .ft-sort-page {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .infinte-scrolling {
+        padding: 10px 15px;
+        font-size: 15px;
+    }
+}
+
+
+.infinte-scrolling {
+    background-color: #0B787C;
+    padding: 15px 30px;
+    color: white;
+    font-size: 20px;
+    border: none;
+    margin: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.ft-sort-page {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    flex-wrap: wrap;
 }
