--- a/frontend/src/Styles/About/favourite.css
+++ b/frontend/src/Styles/About/favourite.css
@@ -36,10 +36,18 @@
 } */
 .DeleteIcon {
   position: relative;
-  top: 2px;
-  left: 299px;
-  height: 30px;
-  width: 50px;
+  top: -5px;
+  left: 310px;
+  height: 35px;
+  width: 35px;
+  background-color: rgb(226, 226, 226);
+  border-radius: 50%;
+  padding: 7px;
+  opacity: 0.8;
+}
+
+.DeleteIcon:hover{
+    background-color: brown;
 }
 .fav-status{
     position: absolute;
